<resources>
    <string name="app_name">CSCB07 Project</string>
    <string name="welcome_screen">Welcome to SnackShack!</string>
    <string name="customer_button">I am a Customer</string>
    <string name="edit_product">Edit Product</string>
    <string name="restaurant_owner_button">I am a Restaurant Owner</string>
    <string name="button_login">LOG IN</string>
    <string name="button_signup">SIGN UP</string>
    <string name="view_orders">View my Orders</string>
    <string name="view_stores">View Stores</string>
    <string name="title_activity_view_stores">Stores</string>
    <string name="title_activity_view_orders">My Orders</string>
    <string name="action_settings">Action Settings</string>
    <string name="large_text">Large Text</string>
    <string name="next">Next Page</string>
    <string name="previous">Previous Page</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="completed_orders">Completed Orders</string>
    <string name="choose_order">Choose an Order:</string>
    <string name="view_product">View a Product in the Order:</string>
    <string name="search">Search</string>
    <string name="edit_quantity">Edit Quantity</string>
    <string name="change">Change</string>
    <string name="edit_order">Edit Order</string>
    <string name="subtotal">Subtotal for this Product: </string>
    <string name="grand_total">Grand Total: </string>
    <string name="product_price">Price of this Product:</string>
    <string name="go_to_store">Go to Store</string>
    <string name="delete_order">Delete Order</string>
    <string name="delete_all">Delete All Orders</string>
    <string name="snackshack">SnackShack!</string>

    <string-array name="signup_spinner_values">
        <item>I am a customer.</item>
        <item>I am a store owner.</item>
    </string-array>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="ownerWelcomeText">Welcome!</string>
    <string name="storeOwnerAddButton">ADD PRODUCT TO STORE</string>
    <string name="storeOwnerEditButton">EDIT PRODUCT INFORMATION</string>
    <string name="viewIncomingButton">VIEW INCOMING ORDERS</string>
    <string name="viewFulfilledButton">VIEW FULFILLED ORDERS</string>
    <string name="productsMessage">Add Products</string>
    <string name="productNameText">Add Product Name</string>
    <string name="productBrandText">Add Product Brand</string>
    <string name="productPriceText">Add Product Price</string>
    <string name="registerStoreMessage">Register your store name below to continue.</string>
    <string name="storeNameText">Store name</string>
    <string name="registerStoreButton">REGISTER</string>
    <string name="title_activity_store_owner_view_incoming">StoreOwnerViewIncomingActivity</string>
    <string name="back">Back</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="editProductMessage">Choose a Product to Edit</string>
    <string name="fulfilledText">Fulfilled Orders</string>
    <string name="fulfilledOrderInfo">Product:</string>
    <string name="incomingText">Incoming Orders</string>
    <string name="incomingOrderInfo">Order Info:</string>
    <string name="markFulfilledButton">FULFILL ORDER</string>
    <string name="changeToLabel">Change To:</string>
    <string name="currentInfoLabel">Current Info:</string>
    <string name="currentNameText">Current Name</string>
    <string name="currentBrandText">Current Brand</string>
    <string name="currentPrice">Current Price</string>
    <string name="editProductName">New Product Name</string>
    <string name="editBrandName">New Brand Name</string>
    <string name="editPrice">New Price</string>
    <string name="confirmChangesButton">CONFIRM ALL CHANGES</string>
    <string name="registerStoreFeedback"></string>
    <string name="logoutButton">LOGOUT</string>
    <string name="deleteFulfilledOrder">DELETE ORDER HISTORY</string>
    <string name="priceText">Price:</string>
    <string name="quantityText">Quantity:</string>
    <string name="customerNameText">Customer name:</string>
    <string name="orderIdText">Order ID:</string>

    <string name="amount">amount</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="total">Total: </string>
    <string name="chooseProduct">Choose a product: </string>
    <string name="viewCart">View your cart: </string>
    <string name="makeOrder">Make Order</string>
    <string name="totalCostMessage">Total cost:</string>

    <string-array name="defaultOrderSpinnerValues">
        <item>You have no orders.</item>
    </string-array>

</resources>