<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StoreOwnerHomeActivity">

    <TextView
        android:id="@+id/ownerWelcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/ownerWelcomeText"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/storeOwnerAddButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/storeOwnerAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="navigateToAddProducts"
        android:text="@string/storeOwnerAddButton"
        app:layout_constraintBottom_toTopOf="@+id/storeOwnerEditButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ownerWelcomeText" />

    <Button
        android:id="@+id/storeOwnerEditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="navigateToEditProducts"
        android:text="@string/storeOwnerEditButton"
        app:layout_constraintBottom_toTopOf="@+id/viewIncomingButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storeOwnerAddButton" />

    <Button
        android:id="@+id/viewIncomingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="navigateToViewIncoming"
        android:text="@string/viewIncomingButton"
        app:layout_constraintBottom_toTopOf="@+id/viewFullfilledButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storeOwnerEditButton" />

    <Button
        android:id="@+id/viewFullfilledButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="navigateToViewFulfilled"
        android:text="@string/viewFulfilledButton"
        app:layout_constraintBottom_toTopOf="@+id/logoutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewIncomingButton" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="logout"
        android:text="@string/logoutButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewFullfilledButton" />
</androidx.constraintlayout.widget.ConstraintLayout>