<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ordersLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewOrders">

    <Button
        android:id="@+id/viewOrdersNextPageButton"
        android:layout_width="110dp"
        android:layout_height="53dp"
        android:background="#000000"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toEndOf="@+id/viewOrdersPageNumber"
        app:layout_constraintTop_toTopOf="@+id/viewOrdersPageNumber" />

    <Button
        android:id="@+id/viewOrdersPreviousPageButton"
        android:layout_width="110dp"
        android:layout_height="53dp"
        android:background="#000000"
        android:text="@string/previous"
        app:layout_constraintEnd_toStartOf="@+id/viewOrdersPageNumber"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewOrdersPageNumber" />

    <Button
        android:id="@+id/viewOrdersLeftButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/viewOrdersRightButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="1.0"
        tools:text="@string/pending_orders" />

    <View
        android:id="@+id/view"
        android:layout_width="412dp"
        android:layout_height="144dp"
        android:background="#3F51B5"
        android:backgroundTint="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewOrdersPageNumber"
        android:layout_width="84dp"
        android:layout_height="53dp"
        android:background="#3F51B5"
        android:backgroundTint="#3F51B5"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewOrdersTitles"
        app:layout_constraintVertical_bias="0.993" />

    <TextView
        android:id="@+id/viewOrdersTitle"
        android:layout_width="253dp"
        android:layout_height="61dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="80dp"
        android:text="@string/title_activity_view_orders"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/viewOrdersRightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.992"
        app:layout_constraintStart_toEndOf="@+id/viewOrdersLeftButton"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:text="@string/completed_orders" />

    <TextView
        android:id="@+id/viewOrdersTitles"
        android:layout_width="395dp"
        android:layout_height="46dp"
        android:background="#4D00BCD4"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="8sp"
        android:text="@string/shopping_cart"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>