<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context=".ViewStoreActivity"
    android:background="@drawable/appbg3">

    <TextView
        android:id="@+id/viewCart"
        android:layout_width="186dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:text="@string/viewCart"
        android:textColor="#593B16"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountAdded" />

    <Button
        android:id="@+id/viewStoreBackButton"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#593B16"
        android:onClick="Back"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewStoreHeader" />

    <View
        android:id="@+id/viewStoreHeader"
        android:layout_width="417dp"
        android:layout_height="88dp"
        android:background="@drawable/btnbg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/viewStoreStoreName"
        android:layout_width="407dp"
        android:layout_height="50dp"
        android:text="sample name"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="38sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/viewStoreHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewStoreHeader" />

    <Spinner
        android:id="@+id/productsSpinner"
        android:layout_width="368dp"
        android:layout_height="37dp"
        android:layout_marginTop="104dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewStoreHeader" />

    <TextView
        android:id="@+id/chooseProduct"
        android:layout_width="181dp"
        android:layout_height="27dp"
        android:text="@string/chooseProduct"
        android:textColor="#593B16"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/productsSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewStoreHeader"
        app:layout_constraintVertical_bias="0.8" />

    <Button
        android:id="@+id/delete"
        android:layout_width="102dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#593B16"
        android:onClick="remove"
        android:text="@string/remove"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartSpinner" />

    <Button
        android:id="@+id/addAmount"
        android:layout_width="68dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:autoText="false"
        android:backgroundTint="#593B16"
        android:onClick="addAmount"
        android:text="@string/add"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productsSpinner" />

    <EditText
        android:id="@+id/amountAdded"
        android:layout_width="117dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:hint="@string/amount"
        android:inputType="textPersonName"
        android:textColor="#593B16"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/addAmount"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productsSpinner" />

    <TextView
        android:id="@+id/total"
        android:layout_width="119dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete" />

    <TextView
        android:id="@+id/totalHeader"
        android:layout_width="115dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:text="@string/total"
        android:textColor="#593B16"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/total"
        app:layout_constraintEnd_toStartOf="@+id/total"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/total" />

    <Spinner
        android:id="@+id/cartSpinner"
        android:layout_width="368dp"
        android:layout_height="37dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountAdded" />

    <Button
        android:id="@+id/makeOrderButton"
        android:layout_width="149dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#593B16"
        android:onClick="makeOrder"
        android:text="@string/makeOrder"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total" />

    <Button
        android:id="@+id/viewStoreEditOrder"
        android:layout_width="141dp"
        android:layout_height="65dp"
        android:layout_marginStart="4dp"
        android:backgroundTint="#593B16"
        android:onClick="editOrder"
        android:text="@string/edit_order"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/makeOrderButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/makeOrderButton"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>