<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewFulfilledLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StoreOwnerViewFulfilledActivity"
    android:background="@drawable/appbg3">

    <TextView
        android:id="@+id/fulfilledOrderInfo"
        android:layout_width="wrap_content"
        android:layout_height="264dp"
        android:layout_marginTop="16dp"
        android:scrollbarThumbVertical="@color/black"
        android:scrollbarTrackVertical="@color/white"
        android:scrollbars="vertical"
        android:text="@string/fulfilledOrderInfo"
        android:textAlignment="viewStart"
        android:textColor="#593B16"
        app:layout_constraintBottom_toTopOf="@+id/fulfilledTotalCost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fulfilledOrders" />

    <Spinner
        android:id="@+id/fulfilledOrders"
        android:layout_width="264dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#C4A484"
        android:entries="@array/defaultOrderSpinnerValues"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fulfilledOrderIdText" />

    <Button
        android:id="@+id/deleteFulfilledOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#593B16"
        android:onClick="deleteFulfilledOrder"
        android:text="@string/deleteFulfilledOrder"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fulfilledCustomerName" />

    <TextView
        android:id="@+id/fulfilledCustomerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customerNameText"
        android:textAlignment="viewStart"
        android:textColor="#593B16"
        app:layout_constraintBottom_toTopOf="@+id/deleteFulfilledOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fulfilledTotalCost" />

    <TextView
        android:id="@+id/fulfilledOrderIdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/orderIdText"
        android:textColor="#593B16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

    <TextView
        android:id="@+id/fulfilledTotalCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/totalCostMessage"
        android:textAlignment="viewStart"
        android:textColor="#593B16"
        app:layout_constraintBottom_toTopOf="@+id/fulfilledCustomerName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fulfilledOrderInfo" />

    <View
        android:id="@+id/view5"
        android:layout_width="424dp"
        android:layout_height="78dp"
        android:background="@drawable/btnbg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fulfilledText"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>